// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcSummaryInfo icon should render with the given "icon" prop 1`] = `
<div
  class="ec-summary-info"
  data-test="ec-summary-info"
>
  <div
    class="tw-mr-12"
  >
    <svg
      class="ec-icon ec-summary-info__main-icon"
      data-test="ec-summary-info__main-icon ec-summary-info__main-icon__simple-sell"
      height="12"
      width="12"
    >
      <use
        xlink:href="#ec-simple-sell"
      />
    </svg>
  </div>
  <div
    class="ec-summary-info__content"
  >
    <!--v-if-->
  </div>
</div>
`;

exports[`EcSummaryInfo lineItems description when the tooltip is present on the icon should render with the tooltip 1`] = `
DOMWrapper {
  "isDisabled": [Function],
  "wrapperElement": <span
    class="tw-ml-4"
    data-ec-tooltip-mock-content="Some tooltip text"
    data-test="ec-mock ec-tooltip-mock"
  >
    <svg
      class="ec-icon ec-summary-info__content-line-item-icon ec-summary-info__content-line-item-icon-description"
      data-test="ec-summary-info__content-line-item-icon ec-summary-info__content-line-item-icon-description"
      height="14"
      width="14"
    >
      <use
        xlink:href="#ec-simple-info"
      />
    </svg>
  </span>,
}
`;

exports[`EcSummaryInfo lineItems help when the tooltip is present on the icon should render with the tooltip 1`] = `
DOMWrapper {
  "isDisabled": [Function],
  "wrapperElement": <span
    class="tw-ml-4"
    data-ec-tooltip-mock-content="Some tooltip text"
    data-test="ec-mock ec-tooltip-mock"
  >
    <svg
      class="ec-icon ec-summary-info__content-line-item-icon ec-summary-info__content-line-item-icon-help"
      data-test="ec-summary-info__content-line-item-icon ec-summary-info__content-line-item-icon-help"
      height="14"
      width="14"
    >
      <use
        xlink:href="#ec-simple-info"
      />
    </svg>
  </span>,
}
`;

exports[`EcSummaryInfo lineItems should render with the given "lineItems" prop 1`] = `
<div
  class="ec-summary-info"
  data-test="ec-summary-info"
>
  <!--v-if-->
  <div
    class="ec-summary-info__content"
  >
    <div
      data-test="ec-summary-info__content-lines"
    >
      
      <div
        class="ec-summary-info__content-line-item"
      >
        <span
          class="ec-summary-info__content-line-item-text ec-summary-info__content-line-item-text-title"
          data-test="ec-summary-info__content-line-item-text ec-summary-info__content-line-item-text-title"
          title="The title"
        >
          The title
        </span>
        <!--v-if-->
      </div>
      <div
        class="ec-summary-info__content-line-item"
      >
        <span
          class="ec-summary-info__content-line-item-text ec-summary-info__content-line-item-text-description"
          data-test="ec-summary-info__content-line-item-text ec-summary-info__content-line-item-text-description"
          title="Some text"
        >
          Some text
        </span>
        <span
          class="tw-ml-4"
          data-ec-tooltip-mock-content="Some tooltip text"
          data-test="ec-mock ec-tooltip-mock"
        >
          <svg
            class="ec-icon ec-summary-info__content-line-item-icon ec-summary-info__content-line-item-icon-description"
            data-test="ec-summary-info__content-line-item-icon ec-summary-info__content-line-item-icon-description"
            height="14"
            width="14"
          >
            <use
              xlink:href="#ec-simple-info"
            />
          </svg>
        </span>
      </div>
      <div
        class="ec-summary-info__content-line-item"
      >
        <span
          class="ec-summary-info__content-line-item-text ec-summary-info__content-line-item-text-help"
          data-test="ec-summary-info__content-line-item-text ec-summary-info__content-line-item-text-help"
          title="Another text"
        >
          Another text
        </span>
        <!--v-if-->
      </div>
      
      
      
    </div>
  </div>
</div>
`;

exports[`EcSummaryInfo lineItems should render with the not given "lineItems" prop 1`] = `
<div
  class="ec-summary-info"
  data-test="ec-summary-info"
>
  <!--v-if-->
  <div
    class="ec-summary-info__content"
  >
    <!--v-if-->
  </div>
</div>
`;

exports[`EcSummaryInfo slots should render with the default slot given 1`] = `
<div
  class="ec-summary-info"
  data-test="ec-summary-info"
>
  <div
    class="tw-mr-12"
  >
    <svg
      class="ec-icon ec-summary-info__main-icon"
      data-test="ec-summary-info__main-icon ec-summary-info__main-icon__simple-sell"
      height="12"
      width="12"
    >
      <use
        xlink:href="#ec-simple-sell"
      />
    </svg>
  </div>
  <div
    class="ec-summary-info__content"
  >
    <div
      data-test="ec-summary-info__content-lines"
    >
      
      
      
      <div
        data-test="default-slot"
      >
        <span>
           Some text from a slot 
        </span>
      </div>
      
    </div>
  </div>
</div>
`;
